--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="masterdiv w-clearfix">
     <div class="navs w-clearfix"><a href="index.html" class="myname w--current">lucy xu<span class="blinking-cursor">_</span></a></div>
     <div class="w-layout-grid grid">
-      <p id="w-node-c1bc4ff4e4ca-129ea1f0" class="mydesc">hi i’m <a href="about.html" class="homelink">lucy</a>, i am a <a href="#" class="homelinkwip">visual</a> designer and this is my website!<br><br>i currently lead the design team at ucsd&#x27;s largest student design org: <a href="designco.html" class="homelink">design co</a>. i luv my team at design co; they are my family<br><br>this past summer i was a visual design intern at <a href="servicenow.html" class="homelink">servicenow</a> and i will be returning in june to be a full time adult!<br></p>
+      <p id="w-node-c1bc4ff4e4ca-129ea1f0" class="mydesc">hi i’m <a href="about.html" class="homelink">lucy</a>, i am a <a href="#" class="homelinkwip">visual</a> designer and this is my website!<br><br>i currently lead the design team at ucsd&#x27;s largest student design org: <a href="designco.html" class="homelink">design co</a>. i luv my team at design co; they are my family :~)<br><br>this past summer i was a visual design intern at <a href="servicenow.html" class="homelink">servicenow</a> and i will be returning in june to be a full time adult!<br></p>
       <p id="w-node-caf66edfe01c-129ea1f0" class="seconddesc"><strong class="miniheader">RECENTLY<br></strong>i’ve been working on a passion project about girls with my friends vicky and julia &lt;3<br><br><strong>find me on <br></strong>instagram<br>twitter<br>dribbble<br>@lucylouxu<br><br>or email me at lucylouxu@yahoo.com<br></p>
     </div>
     <p class="question">?<br></p>
