--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
     <div class="navs w-clearfix"><a href="index.html" class="myname w--current">lucy xu<span class="blinking-cursor">_</span></a></div>
     <div class="w-layout-grid grid">
       <p id="w-node-c1bc4ff4e4ca-129ea1f0" class="mydesc">hi i’m <a href="about.html" class="homelink">lucy</a>, i am a <a href="#" class="homelinkwip">visual</a> designer and this is my website!<br><br>i currently lead the design team at ucsd&#x27;s largest student design org: <a href="designco.html" class="homelink">design co</a>. i luv my team at design co; they are my family :~)<br><br>this past summer i was a visual design intern at <a href="servicenow.html" class="homelink">servicenow</a> and i will be returning in june to be a full time adult!<br></p>
-      <p id="w-node-caf66edfe01c-129ea1f0" class="seconddesc"><strong class="miniheader">RECENTLY<br></strong>i’ve been working on a passion project about girls with my friends vicky and julia &lt;3<br><br><strong>find me on <br></strong>instagram<br>twitter<br>dribbble<br>@lucylouxu<br><br>or email me at lucylouxu@yahoo.com<br></p>
+      <p id="w-node-caf66edfe01c-129ea1f0" class="seconddesc">
+        <strong class="miniheader">RECENTLY<br></strong>
+        i’ve been working on a passion project about girls with my friends vicky and julia &lt;3<br>
+        <br><strong>find me on <br></strong>
+        <a class="findmelink" id="ig" href="http://www.instagram.com/lucylouxu">instagram</a>
+        <br><a class="findmelink" id="tw" href="https://twitter.com/lucylouxu">twitter</a>
+        <br>
+        <a class="findmelink" id="dr" href="https://twitter.com/lucylouxu">dribbble</a>
+        <br>
+        <br>or email me at lucylouxu@yahoo.com<br></p>
     </div>
     <p class="question">?<br></p>
   </div>
@@ -113,6 +122,33 @@ function animate() {
 }
 
 animate();
+
+// below is the hover in find me
+</script>
+
+<script>
+$(document).ready(function(e) {
+
+  var synoWord = {
+    'ig': '@lucylouxu',
+    'tw': '/lucylouxu',
+    'dr': '/lucylouxu'
+  };
+
+  var maintext = {
+    'ig': 'instagram',
+    'tw': 'twitter',
+    'dr': 'dribble'
+  }
+
+      $('#ig, #tw, #dr').hover(function(){
+      $(this).text(synoWord[this.id]);
+    },function(){
+      $(this).text(maintext[this.id]);
+      });
+});
+
+
 </script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
