i literally spelled dribbble wrong

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a class="findmelink" id="ig" href="http://www.instagram.com/lucylouxu">instagram</a>
         <br><a class="findmelink" id="tw" href="https://twitter.com/lucylouxu">twitter</a>
         <br>
-        <a class="findmelink" id="dr" href="https://twitter.com/lucylouxu">dribbble</a>
+        <a class="findmelink" id="dr" href="https://dribbble.com/lucylouxu">dribbble</a>
         <br>
         <br>or email me at lucylouxu@yahoo.com<br></p>
     </div>
@@ -138,7 +138,7 @@ $(document).ready(function(e) {
   var maintext = {
     'ig': 'instagram',
     'tw': 'twitter',
-    'dr': 'dribble'
+    'dr': 'dribbble'
   }
 
       $('#ig, #tw, #dr').hover(function(){
