--- a/index.html
+++ b/index.html
@@ -40,17 +40,30 @@
   <div class="masterdiv w-clearfix">
     <div class="navs w-clearfix"><a href="index.html" class="myname w--current">lucy xu<span class="blinking-cursor">_</span></a></div>
     <div class="w-layout-grid grid">
-      <p id="w-node-c1bc4ff4e4ca-129ea1f0" class="mydesc">hi i’m <a href="about.html" class="homelink">lucy</a>, i am a <a href="#" class="homelinkwip">visual</a> designer and this is my website!<br><br>i currently lead the design team at ucsd&#x27;s largest student design org: <a href="designco.html" class="homelink">design co</a>. i luv my team at design co; they are my family :~)<br><br>this past summer i was a visual design intern at <a href="servicenow.html" class="homelink">servicenow</a> and i will be returning in june to be a full time adult!<br></p>
+      <p id="w-node-c1bc4ff4e4ca-129ea1f0" class="mydesc">
+        hi i’m <a href="about.html" class="homelink"data-tooltip="come learn about me">lucy</a>,
+        i am a <a href="illustrations.html" class="homelink" data-tooltip="i made some stuff">visual</a> designer and this is my website!
+        <br><br>
+        i currently lead the design team at ucsd&#x27;s largest student design org:
+        <a href="designco.html" class="homelink" data-tooltip="view case study!">design co</a>.
+        i luv my team at design co; they are my family :~)
+        <br><br>
+        this past summer i was a visual design intern at
+        <a href="servicenow.html" class="homelink" data-tooltip="view case study!">servicenow</a>
+        and i will be returning in june to be a full time adult!<br></p>
       <p id="w-node-caf66edfe01c-129ea1f0" class="seconddesc">
         <strong class="miniheader">RECENTLY<br></strong>
-        i’ve been working on a passion project about girls with my friends vicky and julia &lt;3<br>
-        <br><strong>find me on <br></strong>
+        i’ve been working on a passion project about girls with my friends <a class="friendslink" href="https://www.vickyly.co/">vicky</a> and <a class="friendslink" href="https://julianguyen.co/">julia</a> &lt;3<br>
+        <br>
+        <strong class="miniheader">MY QUALIFICATIONS<br></strong>
+          <a class="findmelink" id="re" href="./images/plshireme.pdf">resume</a>
+          <br><br>
+        <strong>find me on <br></strong>
         <a class="findmelink" id="ig" href="http://www.instagram.com/lucylouxu">instagram</a>
         <br><a class="findmelink" id="tw" href="https://twitter.com/lucylouxu">twitter</a>
         <br><a class="findmelink" id="in" href="https://www.linkedin.com/in/lucylouxu/">linkedin</a>
         <br>
         <a class="findmelink" id="dr" href="https://dribbble.com/lucylouxu">dribbble</a>
-        <br>
         <br>
         <br>or email me at lucylouxu@yahoo.com<br></p>
     </div>
@@ -66,12 +79,6 @@ var circles = [];
 for (var i = 0; i < 10; i++) {
   addCircle(i * 4500, [10+0, 900], emoji[Math.floor(Math.random() * emoji.length)]);
   addCircle(i * 420, [10 + 0, -900], emoji[Math.floor(Math.random() * emoji.length)]);
-  // addCircle(i * 450, [10 - 200, -900], emoji[Math.floor(Math.random() * emoji.length)]);
-  // addCircle(i * 150, [10 + 600, 900], emoji[Math.floor(Math.random() * emoji.length)]);
-  // addCircle(i * 450, [10 - 400, -300], emoji[Math.floor(Math.random() * emoji.length)]);
-  // addCircle(i * 450, [10 + 400, 300], emoji[Math.floor(Math.random() * emoji.length)]);
-  // addCircle(i * 450, [10 - 600, -300], emoji[Math.floor(Math.random() * emoji.length)]);
-  // addCircle(i * 450, [10 + 600, 300], emoji[Math.floor(Math.random() * emoji.length)]);
 }
 
 
@@ -135,17 +142,19 @@ $(document).ready(function(e) {
     'ig': '@lucylouxu',
     'tw': '@lucylouxu',
     'in': '/lucylouxu',
-    'dr': '/lucylouxu'
+    'dr': '/lucylouxu',
+    're': 'plshireme.pdf'
   };
 
   var maintext = {
     'ig': 'instagram',
     'tw': 'twitter',
     'in': 'linkedin',
-    'dr': 'dribbble'
+    'dr': 'dribbble',
+    're': 'resume'
   }
 
-      $('#ig, #tw, #in, #dr').hover(function(){
+      $('#ig, #tw, #in, #dr,#re').hover(function(){
       $(this).text(synoWord[this.id]);
     },function(){
       $(this).text(maintext[this.id]);
@@ -153,6 +162,28 @@ $(document).ready(function(e) {
 });
 
 
+</script>
+
+<script>
+
+$('.homelink').hover(function () {
+    var title = $(this).attr('data-tooltip');
+    $(this).data('tipText', title);
+    if(title == ''){}
+    else{
+       $('<p class="tooltip"></p>').fadeIn(200).text(title).appendTo('body');
+    }
+}, function () {
+    $(this).attr('data-tooltip', $(this).data('tipText'));
+    $('.tooltip').fadeOut(200);
+}).mousemove(function (e) {
+    var mousex = e.pageX;
+    var mousey = e.pageY;
+    $('.tooltip').css({
+        top: mousey,
+        left: mousex
+    })
+});
 </script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
