--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 </head>
 <body class="body">
   <div class="masterdiv w-clearfix">
-    <div class="navs w-clearfix"><a href="index.html" class="myname w--current">lucy xu<span class="blinking-cursor">_</span></a></div>
+    <div class="navs w-clearfix"><a href="/" class="myname w--current">lucy xu<span class="blinking-cursor">_</span></a></div>
     <div class="w-layout-grid grid">
       <p id="w-node-c1bc4ff4e4ca-129ea1f0" class="mydesc">
-        hi i’m <a href="about.html" class="homelink"data-tooltip="come learn about me">lucy</a>,
-        i am a <a href="illustrations.html" class="homelink" data-tooltip="i made some stuff">visual</a> designer and this is my website!
+        hi i’m <a href="about" class="homelink"data-tooltip="come learn about me">lucy</a>,
+        i am a <a href="illustrations" class="homelink" data-tooltip="i made some stuff">visual</a> designer and this is my website!
         <br><br>
         i previously led the design team at ucsd&#x27;s largest student design org:
-        <a href="designco.html" class="homelink" data-tooltip="view case study!">design co</a> &
-        my last project was the <a href="comingsoon.html" class="homelink" data-tooltip="view case study!">
+        <a href="designco" class="homelink" data-tooltip="view case study!">design co</a> &
+        my last project was the <a href="comingsoon" class="homelink" data-tooltip="view case study!">
           ucsd design community page</a>. currently i am design co's gif maker :~)
           <br><br>
           this past summer i was a visual design intern at
-          <a href="servicenow.html" class="homelink" data-tooltip="view case study!">servicenow</a>
+          <a href="servicenow" class="homelink" data-tooltip="view case study!">servicenow</a>
           and i will be returning in june to be a full time adult!<br></p>
           <p id="w-node-caf66edfe01c-129ea1f0" class="seconddesc">
             <strong class="miniheader">RECENTLY<br></strong>
