woo htaccess workedgit add *

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <body class="body">
   <div class="masterdiv">
     <div class="headerdiv w-clearfix">
-      <div class="navs w-clearfix"><a href="index.html" class="myname">lucy xu<span class="blinking-cursor">_</span></a></div>
+      <div class="navs w-clearfix"><a href="/" class="myname">lucy xu<span class="blinking-cursor">_</span></a></div>
     </div>
     <p class="aboutme">hi again it&#x27;s lucy :*) i’m an interdisciplinary visual designer based in san diego.<br><br>i spent 3 1/2 years as an undergraduate studying cognitive science at uc san diego. i <s style="display:contents; color: #979acf;">am finishing</s> finished! my b.s. with a specialization in design and interaction as well as 2 minors in business and design.</p>
     <div class="abtpicdiv"><img src="images/DCO_548.jpg" sizes="(max-width: 479px) 86vw, 42vw" id="w-node-da798bc0ac4c-5d07a44e" alt="" class="image-34"><img src="images/61822450_1919639374804482_2458511504400449536_n.jpg" srcset="images/61822450_1919639374804482_2458511504400449536_n-p-500.jpeg 500w, images/61822450_1919639374804482_2458511504400449536_n-p-1080.jpeg 1080w, images/61822450_1919639374804482_2458511504400449536_n-p-1600.jpeg 1600w, images/61822450_1919639374804482_2458511504400449536_n-p-2000.jpeg 2000w, images/61822450_1919639374804482_2458511504400449536_n.jpg 2048w" sizes="(max-width: 479px) 86vw, (max-width: 4876px) 42vw, 2048px" id="w-node-453aa3072603-5d07a44e" alt="" class="image-33"></div>
