--- a/comingsoon.html
+++ b/comingsoon.html
@@ -31,7 +31,7 @@
   <body class="body">
     <div class="masterdiv w-clearfix">
       <div class="navs w-clearfix">
-        <a href="index.html" class="myname w--current">lucy xu<span class="blinking-cursor">_</span></a>
+        <a href="/" class="myname w--current">lucy xu<span class="blinking-cursor">_</span></a>
       </div>
 
 
