--- a/designco.html
+++ b/designco.html
@@ -28,7 +28,7 @@
 <body class="body">
   <div class="masterdiv">
     <div class="headerdiv w-clearfix">
-      <div class="navs w-clearfix"><a href="index.html" class="myname">lucy xu<span class="blinking-cursor">_</span></a></div>
+      <div class="navs w-clearfix"><a href="/" class="myname">lucy xu<span class="blinking-cursor">_</span></a></div>
     </div>
     <div class="dcogrid"><img src="images/dco_1.png" sizes="(max-width: 479px) 35vw, (max-width: 991px) 13vw, 14vw" id="w-node-0ab575f67865-0515c9e1" alt="" class="headerimg">
       <p id="w-node-4d4a9744abd9-0515c9e1" class="writeuph2">Co-Creative Director</p>
