--- a/illustrations.html
+++ b/illustrations.html
@@ -28,7 +28,7 @@
 <body class="body">
   <div class="masterdiv">
     <div class="headerdiv w-clearfix">
-      <div class="navs w-clearfix"><a href="index.html" class="myname w--current">lucy xu<span class="blinking-cursor">_</span></a></div>
+      <div class="navs w-clearfix"><a href="/" class="myname w--current">lucy xu<span class="blinking-cursor">_</span></a></div>
     </div>
     <div class="picdiv"><img src="images/biomesweb.jpg"  sizes="(max-width: 479px) 86vw, (max-width: 767px) 13vw, 6vw"
           id="w-node-0a17775483f9-76556988" alt="" class="illust">
