--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f2b8162e9e4f9432ecc5549" data-wf-site="5f2b5efbcb4a9f94d7b15f3f">
 <head>
   <meta charset="utf-8">
-  <title>About</title>
+  <title>autobiography</title>
   <meta content="About" property="og:title">
   <meta content="About" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
