--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <html data-wf-page="5f2b82db02ec619537e13d35" data-wf-site="5f2b5efbcb4a9f94d7b15f3f">
 <head>
   <meta charset="utf-8">
-  <title>Contact</title>
+  <title>ping me</title>
   <meta content="Contact" property="og:title">
   <meta content="Contact" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
