--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 <body class="body">
   <div class="blackbar"></div>
   <div class="masterdiv">
-    <div class="topnav w-clearfix"><a href="/" class="rightnav">LUCY XU<span class="blinking-cursor">_</span></a><a href="about.html" class="centernav">ABOUT</a><a href="contact.html" class="leftnav">CONTACT</a></div>
+    <div class="topnav w-clearfix"><a href="/" class="rightnav">LUCY XU<span class="blinking-cursor">_</span></a><a href="about" class="centernav">ABOUT</a><a href="contact" class="leftnav">CONTACT</a></div>
     <div class="desc">* DESIGNER @ SERVICENOW in SAN DIEGO, CA</div>
     <div class="allwork">
       <div class="groups w-clearfix">
         <div class="divider"></div>
         <div class="work-h1">servicenow</div>
-        <a data-w-id="e59d717f-c9aa-aceb-253c-6026aa59b21d" href="facelift.html" class="_1work w-inline-block">
+        <a data-w-id="e59d717f-c9aa-aceb-253c-6026aa59b21d" href="facelift" class="_1work w-inline-block">
           <div class="h2andarrow">
             <div class="work-h2">CURRENTLY...</div><img src="images/arrow.svg" width="26" alt="" class="image"></div>
           <div class="work-h3">visual experience designer working crossfunctionally as both a visual and product designer on the design systems team</div>
         </a>
-        <a data-w-id="b737e428-b455-a028-fa3a-b6d7326f0bea" href="#" class="_1work w-inline-block">
+        <a data-w-id="b737e428-b455-a028-fa3a-b6d7326f0bea" href="facelift" class="_1work w-inline-block">
           <div class="h2andarrow">
             <div class="work-h2">2019 INTERNSHIP</div><img src="images/arrow.svg" width="26" alt="" class="image"></div>
           <div class="work-h3-bottom">assisting on the design systems team creating components and iconography<br></div>
