rest of htaccess

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <body class="body">
   <div class="blackbar"></div>
   <div class="masterdiv">
-    <div class="topnav w-clearfix"><a href="index.html" class="rightnav">LUCY XU<span class="blinking-cursor">_</span></a><a href="#" class="centernav">ABOUT</a><a href="contact.html" class="leftnav">CONTACT</a></div>
+    <div class="topnav w-clearfix"><a href="/" class="rightnav">LUCY XU<span class="blinking-cursor">_</span></a><a href="about" class="centernav">ABOUT</a><a href="contact" class="leftnav">CONTACT</a></div>
     <div class="about">— “silly, goofy, gets shit done” </div>
     <div class="aboutbody">i&#x27;m lucy, an interdisciplinary visual designer based in san diego · ◡ ·<br><br>i spent 3 1/2 years as an undergraduate studying cognitive science at uc san diego. i just recently finished my b.s. with a specialization in design and interaction as well as 2 minors in business and design.<br><br>currently a visual designer at servicenow working on design systems ···</div>
     <div class="bottomnav">
