--- a/facelift.html
+++ b/facelift.html
@@ -18,7 +18,7 @@
 <body class="body">
   <div class="blackbar"></div>
   <div class="masterdiv">
-    <div class="topnav w-clearfix"><a href="/" class="rightnav">LUCY XU<span class="blinking-cursor">_</span></a><a href="about.html" class="centernav">ABOUT</a><a href="contact.html" class="leftnav">CONTACT</a></div>
+    <div class="topnav w-clearfix"><a href="/" class="rightnav">LUCY XU<span class="blinking-cursor">_</span></a><a href="about" class="centernav">ABOUT</a><a href="contact" class="leftnav">CONTACT</a></div>
     <div class="facelift">sorry . . . coming soon<span class="blinking-cursor">_</span></div>
 
     <div class="bottomnav">
