--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 <body class="body">
   <div class="blackbar"></div>
   <div class="masterdiv">
-    <div class="topnav w-clearfix"><a href="index.html" class="rightnav">LUCY XU<span class="blinking-cursor">_</span></a><a href="about.html" class="centernav">ABOUT</a><a href="#" class="leftnav">CONTACT</a></div>
+    <div class="topnav w-clearfix"><a href="/" class="rightnav">LUCY XU<span class="blinking-cursor">_</span></a><a href="about" class="centernav">ABOUT</a><a href="contact" class="leftnav">CONTACT</a></div>
     <a class="contact" id="ig"  href="http://www.instagram.com/lucylouxu">instagram</a>
     <br>
     <a class="contact" id="tw"  href="https://twitter.com/lucylouxu">twitter</a>
