--- a/about.html
+++ b/about.html
@@ -3,6 +3,15 @@
 <!--  Last Published: Thu Aug 06 2020 04:40:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f2b8162e9e4f9432ecc5549" data-wf-site="5f2b5efbcb4a9f94d7b15f3f">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151634475-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-151634475-1');
+</script>
   <meta charset="utf-8">
   <title>autobiography</title>
   <!-- <meta content="About" property="og:title">
