--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <!--  Last Published: Thu Aug 06 2020 04:40:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f2b5efbcb4a9faa43b15f3e" data-wf-site="5f2b5efbcb4a9f94d7b15f3f">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151634475-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-151634475-1');
+</script>
   <meta charset="utf-8">
   <title>lucy xu</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
