wrong contact link

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     <br>
     <a class="contact" id="tw"  href="https://twitter.com/lucylouxu">twitter</a>
     <br>
-    <a class="contact" id="in"  href="https://twitter.com/lucylouxu">twitter</a>
+    <a class="contact" id="in"  href="https://www.linkedin.com/in/lucylouxu/">linkedin</a>
     <br>
     <a class="contact" id="dr"  href="https://dribbble.com/lucylouxu">dribbble</a>
     <br>
